syntax = "proto3";

package order;
option go_package = "github.com/scmbr/oms/order-service/internal/pb;orderpb";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItemInput items = 2;
}

message OrderItemInput {
    string product_id = 1;
    int32 quantity = 2;
}

message GetOrderRequest {
    string order_id = 1;
}

message ListOrdersRequest {
    string user_id = 1;
}

message CreateOrderResponse {
    string order_id = 1;
    Order order = 2;
}

message GetOrderResponse {
    Order order = 1;
}

message ListOrdersResponse {
    repeated Order orders = 1;
}

message Order {
    string order_id = 1;
    string user_id = 2;
    string status = 3;
    double total_price = 4;
    repeated OrderItem items = 5;
    string created_at = 6;
}

message OrderItem {
    string item_id = 1;
    string product_id = 2;
    int32 quantity = 3;
    double price = 4;
}
